--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>in.javahome</groupId>
 	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
-	<version>8.2.0-SNAPSHOT</version>
+	<version>8.2.0</version>
 	<name>Java Home myweb</name>
 	<url>http://maven.apache.org</url>
 	
@@ -32,12 +32,12 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusRepo</id>
-		    <url>http://13.234.29.96:8081/repository/sample-snapshots/</url>
+		    <url>http://3.7.254.95:8081/repository/sample-snapshots1/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexusRepo</id>
-		    <url>http://13.234.29.96:8081/repository/sample-releases/</url>
+		    <url>http://3.7.254.95:8081/repository/sample-releases11/</url>
 		</repository>
   	</distributionManagement>
 	
